refactor : 근무자 객체 생성을 통해 검증 책임 분리